logs/rt.atmigrator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/contentmigration'...
Listing './lib/python3.5/site-packages/Products/contentmigration/basemigrator'...
Compiling './lib/python3.5/site-packages/Products/contentmigration/catalogpatch.py'...
***   File "./lib/python3.5/site-packages/Products/contentmigration/catalogpatch.py", line 71
    raise RuntimeError, "%s already has _atct_catalog_object" % catalog
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/contentmigration/common.py'...
***   File "./lib/python3.5/site-packages/Products/contentmigration/common.py", line 67
    raise ValueError, 'Invalid type %s' % type_name
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/contentmigration/inplace.py'...
***   File "./lib/python3.5/site-packages/Products/contentmigration/inplace.py", line 41
    raise ValueError, ('The migrator already has a value '
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/contentmigration/profiles'...
Listing './lib/python3.5/site-packages/Products/contentmigration/profiles/testing'...
Listing './lib/python3.5/site-packages/Products/contentmigration/profiles/testing/types'...
Listing './lib/python3.5/site-packages/Products/contentmigration/tests'...
Listing './lib/python3.5/site-packages/Products.contentmigration-2.1.17.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rt'...
Listing './lib/python3.5/site-packages/rt/atmigrator'...
Listing './lib/python3.5/site-packages/rt/atmigrator/browser'...
Listing './lib/python3.5/site-packages/rt/atmigrator/locales'...
Listing './lib/python3.5/site-packages/rt/atmigrator/locales/it'...
Listing './lib/python3.5/site-packages/rt/atmigrator/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/rt/atmigrator/tests'...
Listing './lib/python3.5/site-packages/rt.atmigrator-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
